add mongo-secret config file

--- a/mongo-secret.yaml
+++ b/mongo-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: mongo-secret
 type: Opaque
 data:
-  mongo-user: bW9uZ291c2Vy
+  mongo-user: bW9uZ291c2Vy             # use base 64 + external encryption in practice 
   mongo-password: bW9uZ29wYXNzd29yZA==
